--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,12 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
         "express": "^4.17.1",
-        "googleapis": "^39.2.0"
+        "express-session": "^1.18.0",
+        "googleapis": "^39.2.0",
+        "jsonwebtoken": "^9.0.2",
+        "passport": "^0.7.0",
+        "passport-auth0": "^1.4.4"
     }
 }
